--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,16 @@
+@font-face {
+  font-family: "Fira Sans Condensed";
+  src: url("./assets/fonts/FiraSansCondensed-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
-  font-family:
-    "Fira Sans Condensed",
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    "Roboto",
-    "Oxygen",
-    "Ubuntu",
-    "Cantarell",
-    "Fira Sans",
-    "Droid Sans",
-    "Helvetica Neue",
-    sans-serif;
+  background: linear-gradient(to bottom, #24252f 0%, #31313f 50%, #242530 100%)
+    center center/cover no-repeat;
+  min-height: 100vh;
+  font-family: "Fira Sans Condensed", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
