--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.container {
+  max-width: 1240px;
+  margin: 0 auto;
+}
