feat: implement portfolio-cases requests

--- a/src/components/Portfolio/Portfolio.module.scss
+++ b/src/components/Portfolio/Portfolio.module.scss
@@ -54,7 +54,8 @@
     align-items: center;
     justify-content: center;
     box-sizing: border-box;
-    padding: 35px 25px;
+    padding-right: 5px;
+    text-align: center;
     span {
       font-size: 24px;
       font-weight: 600;
