fix: change portfolio bg url

--- a/src/components/Portfolio/Portfolio.module.scss
+++ b/src/components/Portfolio/Portfolio.module.scss
@@ -39,7 +39,7 @@
   width: 378px;
   height: 378px;
   box-sizing: border-box;
-  background: url("../../assets/img/case-1.png") center center/cover no-repeat;
+  background: center center/cover no-repeat;
   display: flex;
   justify-content: end;
   align-items: flex-start;
