--- a/src/components/Portfolio/Portfolio.module.scss
+++ b/src/components/Portfolio/Portfolio.module.scss
@@ -40,7 +40,7 @@
 .caseList {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(378px, 0fr));
-  gap: 31px 53px;
+  gap: 31px 49px;
 }
 
 .case {
@@ -51,9 +51,13 @@
   display: flex;
   justify-content: end;
   align-items: flex-start;
-  padding: 19px 13px;
+  padding: 19px 20px;
   border-radius: 12px;
-  div {
+  position: relative;
+  .mobile_wrapper {
+    display: none;
+  }
+  .header_text {
     background: url("../../assets/icons/case-label.svg") center center/cover
       no-repeat;
     width: 128px;
@@ -69,6 +73,12 @@
       font-weight: 600;
       color: #fff;
     }
+    p {
+      display: none;
+    }
+    img {
+      display: none;
+    }
   }
 }
 
@@ -83,6 +93,10 @@
 }
 
 @media (max-width: 872px) {
+  main {
+    padding: 0 25px;
+  }
+
   .caseList {
     display: flex;
     justify-content: center;
@@ -96,5 +110,95 @@
 
   .portfolio__category {
     margin-bottom: 25px;
+  }
+}
+
+@media (max-width: 767px) {
+  main {
+    padding: 0 24px;
+  }
+
+  .portfolio__title {
+    margin-top: 0;
+    font-size: 21px;
+    margin-bottom: 47px;
+    font-family: "Rubik";
+    font-weight: 500;
+  }
+
+  .portfolio__categoriesList {
+    justify-content: space-between;
+    margin-bottom: 28px;
+  }
+
+  .portfolio__category {
+    margin-bottom: 17px;
+    width: 157px;
+    font-size: 12px;
+    padding: 10px 2px;
+    line-height: 100%;
+    height: 33px;
+    font-family: "Open Sans";
+    &:hover {
+      transform: translateY(0px);
+      background: #292936;
+    }
+    &_active {
+      background: #2d76f9;
+      transform: translateY(0px);
+      &:hover {
+        background: #2d76f9;
+      }
+    }
+  }
+
+  .case {
+    width: 327px;
+    height: 320px;
+    align-items: flex-end;
+    justify-content: flex-start;
+    padding: 22px 29px;
+    .mobile_wrapper {
+      display: block;
+      position: absolute;
+      background: linear-gradient(
+        to bottom,
+        rgba(49, 51, 65, 0),
+        rgb(9, 11, 33) 100%
+      );
+      width: 327px;
+      height: 320px;
+      top: 0;
+      left: 0;
+      border-radius: 11px;
+      z-index: 0;
+    }
+    .header_text {
+      z-index: 1;
+      background: none;
+      display: block;
+      width: auto;
+      height: auto;
+      left: 5px;
+      span {
+        font-size: 18px;
+        font-weight: 500;
+        color: #fff;
+        font-family: "Rubik";
+      }
+      p {
+        font-family: "Open Sans";
+        display: block;
+        margin: 0;
+        margin-top: 6px;
+        font-size: 13px;
+        color: #fff;
+        text-align: left;
+      }
+      img {
+        display: block;
+        margin-bottom: 7px;
+      }
+    }
   }
 }
